--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "todo web app",
   "main": "index.js",
   "scripts": {
+    "start": " nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,6 +21,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.3",
     "express-ejs-layouts": "^2.5.1",
-    "mongoose": "^6.2.10"
+    "mongoose": "^6.2.10",
+    "nodemon": "^2.0.15"
   }
 }
